Updated openapi.yml and swagger specs.
