# internal/controller/routing.go
@@ -3,7 +3,7 @@ package controller
 import "net/http"
 
 func (c *Controller) routing() {
-	// swagger:route GET /user/{userId} Users getUsers
+	// swagger:route GET /user/{userId} Users getUser
 	// Returns a user for a given ID.
 	//
 	// Parameters:
@@ -95,5 +95,28 @@ func (c *Controller) routing() {
 	//   description: An internal server error occurred processing the request
 	c.mux.HandleFunc("/user/{id}", c.DeleteUser).Methods(http.MethodDelete)
 
+	// swagger:route GET /users Users findUsers
+	// Returns all users with pagination.
+	//
+	// Parameters:
+	//   + name: limit
+	//     in: query
+	//     description: Limit user list size to get. Should be 20 or less and positive number.
+	//     required: true
+	//     type: integer
+	//   + name: offset
+	//     in: query
+	//     description: Offset value to get user list. Should be a positive number.
+	//     required: true
+	//     type: integer
+	//
+	// security:
+	// - apiKey: []
+	// responses:
+	//  200: Returns user list
+	//  400:
+	// 	 description: If limit or offset values are not numbers or are empty
+	//	500:
+	//	 description: An internal server error occurred processing the request
 	c.mux.HandleFunc("/users", c.FindUsers).Methods(http.MethodGet)
 }
